src/components/header/header.css
.header {background-color:#3f3f3f; box-shadow:0px 1px 0px rgba(0,0,0,0.10);}
.headerrow{display: flex; align-items: center; justify-content: space-between;}
.colheadname-row{display: flex; align-items: center;}
.sidemenuicon{background-color:inherit; color: #fff; font-size: 26px; margin-right: 20px; margin-left: 5px;}
.headname{color:#fff; font-size: 16px; font-weight: 600; line-height: 1.3;}
 
.headicon{margin-right: 15px; position: relative;}
.headicon button{background-color:inherit; border: none; color: #fff; padding: 5px 10px; font-size: 20px; border-radius: 4px;}
.headicon button:hover{background-color: #e6e6e6; color: #3f3f3f;}
.headbtngear{}
.headbtnbell{}
.headbtnenvelope{}

.headerprofile{position: relative; margin-left: 15px; padding-left: 15px;}
.headerprofile:after{content: ''; position: absolute; left: 0; top:0; bottom:0; border-left:1px solid #e6e6e6;}
.profiledroupdown{border: none; font-size: 14px; padding: 0; text-align: left;}
.profiledroupdown:hover{color: #fff;}
.profiledroupdown.dropdown-toggle::after{display: none;}
.profiledroupdown-row{display: flex; align-items: center; color: #fff;}
.profileicon{display: flex; width: 30px; margin-right: 8px; font-size: 32px; text-align: left;}
.profilename{font-weight: 500; display: flex; flex-direction: column; justify-content: start;}
.profilename span{display: block;}
.dropdown-menu .dropdown-item{font-size: 14px; padding: 8px 15px;}
.dropdown-menu .dropdown-item:hover{text-decoration: none; background-color: rgb(33 35 44/5%);}


.colheadprofilerow{display: flex; align-items: center; justify-content: end;}
.headsearchrow{justify-content: center; max-width: 360px;}
.colheadsearch .form-control {width: 100%; border-radius: 40px; height: 40px; padding: 10px 20px 10px 40px;}
.headinput{position: relative;}
.headinput .rs-icon{position: absolute; left: 10px; top: 10px;font-size: 18px;}
.quickadd-menu {margin-left: 10px;}
.quickadd-menuicon{position: relative;}
.quickadd-menu .quickadd-menuicon button{width: 40px; height: 40px;font-size: 18px; border-radius: 50%; background-color: #fff; color: #21232c; border: 1px solid rgba(33,35,44,.24); box-shadow: 0 1px 2px 0 rgb(42 54 71/5%); display: flex; align-items: center; justify-content: center; text-decoration: none; transition: background-color .1s;}
.quickadd-menu .quickadd-menuicon button:after{display: none;}
.quickadd-menu .quickadd-menuicon button:hover{background-color: #f5f5f6;}
.quickadd-menu .quickadd-menuicon button.show{background-color: #e6e6e6; color: #21232c;}
.quickadd-menu .quickadd-menuicon button.show svg{transform: rotate(45deg); transition: transform 0.1s ease 0s, fill 0.1s ease 0s;}
.quickadd-menulist .dropdown-item-text{padding: 8px 15px; cursor: pointer;}
.quickadd-menulist .dropdown-item-text:hover{background-color: #f5f5f6;}
.quickadd-menulist .dropdown-item-text svg {width: 20px;}
.colactionbtnrow{display: flex; justify-content: end;}


/* Sidebar Menu */

.sidenavhead {padding: 10px; height: 58px; text-align: center; line-height: 38px; font-size: 30px; font-weight: 900; color: #ffffff;}
.sidenavhead img{width:auto; height: 100%;}
.sidenavhead .sidehidelogo {display: none; position: absolute; left: 12px; top: 18px; width: 30px; height: auto;}
.rs-sidenav-collapse-in .sidenavhead .sideopenlogo {display: none;}
.rs-sidenav-collapse-in .sidenavhead .sidehidelogo {display: block;}
.sidenavhead i{font-size: 20px;}
.tnavicon a img {position: absolute; left: 15px; top: 15px; width: 24px; height: auto;}
.rs-sidenav.sidenav{display: flex; flex-direction: column; height: 100%; background-color: #fff; border-right: 1px solid #e6e6e6; box-shadow: 0 .9375rem 1.875rem 0 rgba(0,0,0,.02); transition: all .2s ease;}
.rs-sidenav.sidenav .sidenavhead{background-color: #3f3f3f;}
.rs-sidenav .rs-sidenav-body{margin: 10px 0; height:calc(100% - 58px); overflow: auto;}
.rs-sidenav.sidenav .sidemenu ul > li{display: flex; flex-direction: column; position: relative;}
.rs-sidenav.sidenav .sidemenu ul > li:first-child{padding-top:0;}
.rs-sidenav.sidenav .sidemenu ul > li > a{height:auto; position: relative; margin: 0; font-size: 14px; color: #3f3f3f; display: flex; align-items: center; padding: 0.75rem 1.2rem; transition: all .5s;}
.rs-sidenav.sidenav .sidemenu ul > li > a svg{color: #3f3f3f; font-size: 20px;}
.nacicon {width: 26px; text-align: center;}
.rs-sidenav.sidenav .sidemenu ul > li > a .nav-text{margin-left: 10px;}
.rs-sidenav-collapse-in .nav-text {display: none;}
.rs-sidenav.sidenav .sidemenu ul > li > a:hover{background-color: rgba(63,63,63, 0.2) !important; color: #0d68c5;}
.rs-sidenav.sidenav .sidemenu ul > li.rs-nav-item-active a{color: #0d68c5; fill: #0d68c5;}
.rs-sidenav.sidenav .sidemenu ul > li.rs-nav-item-active a svg, .rs-sidenav.sidenav .sidemenu ul > li > a:hover svg{color: #0d68c5; fill: #0d68c5;}

